fix alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,17 +2,17 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+ 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
+ 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+ 
 a {
   font-weight: 500;
   color: #646cff;
@@ -21,20 +21,24 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+ 
 body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
-
+ 
+*{
+  box-sizing: border-box;
+}
+ 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+ 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -53,7 +57,7 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+ 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
